add radio buttons to select which side user is inputting length for, and back end logic to calculate the other two sides and display all dimensions to user

--- a/Views/form.cshtml
+++ b/Views/form.cshtml
@@ -16,6 +16,24 @@
         <label for='leg'>Enter the length of a side: </label>
         <input id='leg' name='leg' class='form-control' type='text'>
       </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="side" value="hypotenuse" checked>
+          hypotenuse
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="side" value="opposite">
+          opposite
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="side" value="adjacent">
+          adjacent
+        </label>
+      </div>
       <button type="submit" name="button">Submit</button>
     </form>
   </body>
