--- a/Views/form.cshtml
+++ b/Views/form.cshtml
@@ -36,5 +36,6 @@
       </div>
       <button type="submit" name="button">Submit</button>
     </form>
+    <canvas id="myCanvas" width="150" height="150"></canvas>
   </body>
 </html>
